--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,11 +1,19 @@
+:root {
+    --main-font:'Roboto', sans-serif;
+    --secondary-font:'Raleway', sans-serif;
+    --title-light-theme-color: #212121;
+    --title-dark-theme-color:#FFFFFF;
+    --main-text-color:#757575;
+    --aksent-color:#2196F3;
+}
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--main-font);
     font-size: 14px;
     background-color: #FFFFFF;
-    color: #757575;
+    color: var(--main-text-color);
 }
 .logo {
-font-family: Raleway;
+font-family: var(--secondary-font)
 font-style: normal;
 font-weight: bold;
 font-size: 26px;
@@ -14,7 +22,7 @@ letter-spacing: 0.03em;
 color:#000000;
 }
 .web {
-    color: #2196F3;
+    color: var(--aksent-color);
 }
 .link {
     text-decoration: none;
@@ -27,18 +35,18 @@ color:#000000;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;  
-    color: #212121;
+    color: var(--title-light-theme-color)
 }
 .navigation-link:hover,
 .navigation-link:focus {
-    color: #2196F3
+    color: var(--aksent-color);
 }
 .header-mailto,.header-tel {
-    color: #757575;
+    color: var(--main-text-color);
     }
 .header-mailto:hover, 
 .header-mailto:focus {
-color: #2196F3;
+color: var(--aksent-color);
 }
 .hero-title {
 font-weight: 900;
@@ -47,7 +55,7 @@ line-height:1.36;
 text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
-color: #FFFFFF;
+color: var(--title-dark-theme-color);
 }
 .modal-button {
 font-weight: bold;
@@ -57,8 +65,8 @@ display: flex;
 align-items: center;
 text-align: center;
 letter-spacing: 0.06em;
-background-color: #2196F3;
-color: #FFFFFF;
+background-color: var(--aksent-color);
+color: var(--title-dark-theme-color);
 }
 .subtitle, .subtitle-box {
 font-weight: bold;
@@ -66,13 +74,13 @@ font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.03em;
 text-transform: uppercase;
-color: #212121;
+color: var(--title-light-theme-color)
 }
 .description {
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
-color: #757575;
+color:var(--main-text-color);
 }
 .section-subtitle {
 font-weight: bold;
@@ -80,11 +88,11 @@ font-size: 36px;
 line-height: 1.16;
 text-align: center;
 letter-spacing: 0.03em;
-color: #212121;
+color: var(--title-light-theme-color)
 }
 .subtitle-box {
 text-align: center;
-color: #FFFFFF;
+color: var(--title-dark-theme-color);
 }
 .subtitle-name, .subtitle-position {
 font-weight: 500;
@@ -92,9 +100,12 @@ font-size: 16px;
 line-height: 1.19;
 text-align: center;
 letter-spacing: 0.03em;
-color: #212121;
+color: var(--title-light-theme-color)
 }
 .subtitle-position {
 font-weight: normal;
-color: #757575;
+color: var(--main-text-color);
+}
+.address {
+
 }
