--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -35,7 +35,7 @@ color:#000000;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;  
-    color: var(--title-light-theme-color)
+    color: var(--title-light-theme-color);
 }
 .navigation-link:hover,
 .navigation-link:focus {
@@ -80,11 +80,15 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 color: var(--title-light-theme-color)
 }
-.description {
+.description, .description-portfolio {
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
 color:var(--main-text-color);
+}
+.description-portfolio {
+font-size: 16px;
+line-height: 1.88;
 }
 .section-subtitle {
 font-weight: bold;
@@ -121,5 +125,32 @@ letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6);
 }
 .footer-subtitle {
+color: var(--title-dark-theme-color);
+}
+.button {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.625;
+text-align: center;
+letter-spacing: 0.03em;
+color: var(--title-light-theme-color);
+background: #F5F4FA;
+}
+.button:hover,
+.button:focus {
+color: var(--title-dark-theme-color);
+background-color: var(--aksent-color);
+}
+.subtitle-portfolio {
+font-weight: bold;
+font-size: 18px;
+line-height: 2;
+letter-spacing: 0.06em;
+color: var(--title-light-theme-color);
+}
+.text-portfolio {
+font-size: 18px;
+line-height: 1.56;
+letter-spacing: 0.03em;
 color: var(--title-dark-theme-color);
 }
