--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -13,6 +13,7 @@ body {
     color: var(--main-text-color);
 }
 .logo {
+margin-right: 85px;
 font-family: var(--secondary-font)
 font-style: normal;
 font-weight: bold;
@@ -29,6 +30,23 @@ color:#000000;
 }
 .list {
     list-style:none;
+}
+.container {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.navigation {
+    display: flex;
+    align-items: center;
+}
+.navigation-list {
+display: flex;
+}
+.navigation-list-item:not(:last-child) {
+    margin-right: 50px;
 }
 .navigation-link,.header-mailto,.header-tel {
     font-weight: 500;
