--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -33,7 +33,7 @@ color:#000000;
     list-style:none;
 }
 .container {
-    width: 1200px;
+    width: 1230px;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
@@ -42,7 +42,7 @@ color:#000000;
 .header {
     padding-top: 24px;
     padding-bottom: 25px;
-}
+    }
 .header .container {
     display: flex;
     align-items: center;
@@ -114,6 +114,9 @@ color: var(--title-dark-theme-color);
 .modal-button {
 display: flex;
 margin: auto;
+padding: 10px 32px;
+min-width: 200px;
+height: 50px;
 font-weight: bold;
 font-size: 16px;
 line-height: 1.88;
@@ -121,20 +124,30 @@ text-align: center;
 letter-spacing: 0.06em;
 background-color: var(--aksent-color);
 color: var(--title-dark-theme-color);
+border-radius: 4px;
+border-color: transparent;
 }
 img {
     display: block;
 }
-.special {
-    display: flex;
-    align-items: center;}
 .section {
     padding-top: 94px;
     padding-bottom: 94px;
 }
+.special {
+    display: flex;
+    align-items: center;
+    }
 .speciality:not(:last-child) {
     margin-right: 30px;}
-    
+.special-item-img {
+    margin-bottom: 30px;
+width: 270px;
+height: 120px;
+background: #F5F4FA;
+border-color: transparent;
+border-radius: 4px;
+}    
 .subtitle, .subtitle-box, .footer-subtitle {
 font-weight: bold;
 font-size: 14px;
@@ -153,9 +166,21 @@ color: var(--title-light-theme-color)
 h2 {
     margin-bottom: 50px;
 }
+h3 {
+    margin-bottom: 10px;
+}
 .our-team {
-    display: flex;
-    
+    display: flex;   
+}
+.team-item {
+    width: 270px;
+height: 422px;
+background: #FFFFFF;
+box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+border-radius: 0px 0px 4px 4px;
+}
+.our-team-img {
+    margin-bottom: 30px;
 }
 .description, .description-portfolio {
 font-size: 14px;
@@ -179,6 +204,12 @@ color: var(--title-light-theme-color)
 text-align: center;
 color: var(--title-dark-theme-color);
 }
+.subtitle-name {
+    margin-bottom: 10px;
+}
+.subtitle-position {
+    margin-bottom: 16px;
+}
 .subtitle-name, .subtitle-position {
 font-weight: 500;
 font-size: 16px;
@@ -190,6 +221,18 @@ color: var(--title-light-theme-color)
 .subtitle-position {
 font-weight: normal;
 color: var(--main-text-color);
+}
+.team-icon {
+    display: flex;
+}
+.icon:hover,.icon:focus {
+    color: var(--aksent-color);
+}
+.icon:not(:last-child) {
+    margin-right: 10px;
+}
+.our-clients {
+    display: flex;
 }
 .address {
        color:var(--title-dark-theme-color);
