--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -136,7 +136,7 @@ img {
 }
 .special {
     display: flex;
-    align-items: center;
+    justify-content: center;
     }
 .speciality:not(:last-child) {
     margin-right: 30px;}
@@ -156,8 +156,10 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 color: var(--title-light-theme-color)
 }
+
 .doing {
     display: flex;
+    justify-content: center;
     background: rgba(47, 48, 58, 0.8);
 }
 .team {
@@ -170,7 +172,8 @@ h3 {
     margin-bottom: 10px;
 }
 .our-team {
-    display: flex;   
+    display: flex;
+    justify-content: center;   
 }
 .team-item {
     width: 270px;
@@ -233,7 +236,25 @@ color: var(--main-text-color);
 }
 .our-clients {
     display: flex;
+    justify-content: center;
 }
+.client-icon {
+display: flex;
+justify-content: center;
+align-items: center;
+width: 170px;
+height: 90px;
+border: 1px solid #AFB1B8;
+border-radius: 4px;
+}
+.client-icon:not(:last-child) {
+    margin-right: 30px;
+}
+.client-icon:hover,
+.client-icon:focus {
+    border-color: var(--aksent-color);
+}
+
 .address {
        color:var(--title-dark-theme-color);
 }
