--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -156,8 +156,10 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 color: var(--title-light-theme-color)
 }
-
-.doing {
+.features {
+    width: 270px;
+}
+.doing-list {
     display: flex;
     justify-content: center;
     background: rgba(47, 48, 58, 0.8);
@@ -258,30 +260,66 @@ border-radius: 4px;
 .address {
        color:var(--title-dark-theme-color);
 }
+.footer {
+    background: #2F303A;
+}
+.footer .container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    }
+.footer-logo {
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+.footer-subscribe {
+    padding-top: 72px;
+    padding-bottom: 86px;
+    margin-bottom: 20px;
+}
 .footer-mailto, .footer-tel, .address{
-font-weight: normal;
+text-decoration: none;
+    font-weight: normal;
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6);
 }
-.footer-subtitle {
-color: var(--title-dark-theme-color);
+.footer-mailto, .address {
+margin-bottom: 9px;
 }
+.footer-mailto:hover,
+.footer-mailto:focus {
+    color: var(--aksent-color);
+}
+.footer-tel:hover,
+.footer-tel:focus {
+    color: var(--aksent-color);
+}
+.footer-subtitle {
+padding-top: 72px;
+padding-bottom: 164px;
+margin-bottom: 20px;
+    color: var(--title-dark-theme-color);
+}
+.footer-icons {
+    display: block;
+}
+.footer-icons-label
+{display: flex;}
 .button {
 font-weight: 500;
 font-size: 16px;
 line-height: 1.625;
 text-align: center;
 letter-spacing: 0.03em;
-color: var(--title-light-theme-color);
-background: #F5F4FA;
-}
-.button:hover,
-.button:focus {
 color: var(--title-dark-theme-color);
-background-color: var(--aksent-color);
+background: #2196F3;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+border: transparent;
 }
+
 .subtitle-portfolio {
 font-weight: bold;
 font-size: 18px;
