--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -82,6 +82,10 @@ padding-bottom: 32px;
 .navigation-link:focus {
     color: var(--aksent-color);
 }
+.header-address {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
 .header-mailto,.header-tel {
     color: var(--main-text-color);
     }
@@ -102,6 +106,7 @@ color: var(--aksent-color);
     padding-bottom: 280px;
 }
 .hero-title {
+    margin-top: 0px;
 margin-bottom: 30px;
 font-weight: 900;
 font-size: 44px;
@@ -141,6 +146,8 @@ p {
 .special {
     display: flex;
     justify-content: center;
+    margin-top: 0px;
+    margin-bottom: 0px;
     }
 .speciality:not(:last-child) {
     margin-right: 30px;}
@@ -174,20 +181,26 @@ color: var(--title-light-theme-color)
 .doing-list {
     display: flex;
     justify-content: center;
+    margin-top: 0px;
+    margin-bottom: 0px;
     background: rgba(47, 48, 58, 0.8);
 }
 .team {
     background: #F5F4FA;
 }
 h2 {
+    margin-top: 0px;
     margin-bottom: 50px;
 }
 h3 {
+    margin-top: 0px;
     margin-bottom: 10px;
 }
 .our-team {
     display: flex;
-    justify-content: center;   
+    justify-content: center;
+    margin-top: 0px;
+    margin-bottom: 0px;   
 }
 .team-item {
     width: 270px;
@@ -206,6 +219,7 @@ letter-spacing: 0.03em;
 color:var(--main-text-color);
 }
 .description-portfolio {
+margin-bottom: 20px;
 font-size: 16px;
 line-height: 1.88;
 }
@@ -245,15 +259,23 @@ color: var(--main-text-color);
     justify-content: center;
     padding-left: 0px;
 }
-.icon:hover,.icon:focus {
-    color: var(--aksent-color);
+.icon:hover,
+.icon:focus {
+    background-color: var(--aksent-color);
 }
 .icon:not(:last-child) {
     margin-right: 10px;
 }
+.team-icon-img {
+    ;
+    width: 44px;
+    height: 44px;
+}
 .our-clients {
     display: flex;
     justify-content: center;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 .client-icon {
 display: flex;
@@ -325,7 +347,7 @@ color: var(--title-dark-theme-color);
     align-items: center;
     padding-left: 0px;
     margin-bottom: 0px;
-}
+    }
 .footer-icons-label:not(:last-child) {
     margin-right: 10px;}
 
@@ -342,23 +364,11 @@ border-radius: 4px;
 border: transparent;
 }
 
-.subtitle-portfolio {
-font-weight: bold;
-font-size: 18px;
-line-height: 2;
-letter-spacing: 0.06em;
-color: var(--title-light-theme-color);
-}
-.text-portfolio {
-font-size: 18px;
-line-height: 1.56;
-letter-spacing: 0.03em;
-color: var(--title-dark-theme-color);
-}
 .button-item {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-bottom: 50px;
 }
 .button {
     
@@ -375,4 +385,45 @@ border-color: transparent;
 .button:focus {
     background-color: var(--aksent-color);
     color: var(--title-dark-theme-color);
+}
+.portfolio-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+.portfolio-list {
+margin-right: 30px;
+margin-bottom: 30px;
+width: 370px;
+height: 404px;
+background: #FFFFFF;
+border: 1px solid #EEEEEE;
+}
+.portfolio-list:nth-child(3n) {
+    margin: 0px;
+}
+.portfolio-list:nth-last-child(-n + 3){
+    margin-bottom: 0px;
+}
+.portfolio-link {
+    margin-bottom: 20px;
+}
+.subtitle-portfolio {
+    margin-bottom: 4px;
+font-weight: bold;
+font-size: 18px;
+line-height: 2;
+letter-spacing: 0.06em;
+color: var(--title-light-theme-color);
+}
+.subtitle-portfolio, .description-portfolio {
+    margin-left: 24px;
+    margin-right: 24px;
+}
+.text-portfolio {
+font-size: 18px;
+line-height: 1.56;
+letter-spacing: 0.03em;
+color: var(--title-dark-theme-color);
 }
